--- a/src/app/judge-editor/judge-editor.component.html
+++ b/src/app/judge-editor/judge-editor.component.html
@@ -3,7 +3,7 @@
   <tr class="list-group-item row">
     <th class="col-3">Name</th>
     <th class="col-2">Status</th>
-    <th class="col" *ngFor="let day of settings.days">{{ day | date:'EEEE MMM d' }}</th>
+    <!-- <th class="col" *ngFor="let day of settings.days">{{ day | date:'EEEE MMM d' }}</th> -->
   </tr>
   <tr class="list-group-item row" *ngFor="let judge of judges">
     <td class="name col-3">
