Removed judge features

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
       <i class="fa fa-calendar"></i>
       <span>Schedule</span>
     </a>
-    <a class="nav-link" routerLink="/judges">
+    <!-- <a class="nav-link" routerLink="/judges">
       <i class="fa fa-users"></i>
-      <span>Judges</span>
-    </a>
+      <span>Judges</span> 
+    </a> -->
     <a class="nav-link" routerLink="/print">
       <i class="fa fa-print"></i>
       <span>Print</span>
