--- a/src/app/test-card/test-card.component.html
+++ b/src/app/test-card/test-card.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="test-card alert alert-dark row" #test [dragData]="test" (onDragEnd)="testGrabbed($event)"> -->
-<!-- <div class="test-card alert alert-dark row" #testElt (onDragEnd)="testGrabbed($event)">
+<div class="test-card alert alert-dark row" #testElt (onDragEnd)="testGrabbed($event)">
   <div class="test-content col">
     <h5 [class.capitalize]="test.phase !== 'custom'">{{ test.testcode }}<span *ngIf="test.phase !== 'custom'"> {{ test.phase }}</span></h5>
     <div *ngIf="test.phase === 'prel'">
@@ -22,5 +22,4 @@
       <button class="btn btn-sm" [class.btn-danger]="!test.hasBfinal" [class.btn-success]="test.hasBfinal" type="button" (click)="toggleFinal('b')">BFIN</button>
     </div>
   </div>
-
-</div> -->
+</div>
