--- a/src/app/schedule-container/schedule-container.component.html
+++ b/src/app/schedule-container/schedule-container.component.html
@@ -3,7 +3,7 @@
     <ngb-alert [dismissible]="false" type="danger">Please select a competition before proceeding.</ngb-alert>
   </div>
   <div *ngIf="currentCompetition" class="row h-100">
-    <app-unassigned-tests *ngIf="unscheduledTests.length > 0" [@openClose]="menuState" class="col-3 h-100 p-0" [class.all-assigned]="" (testDropped)="dragEnd($event)" (testDragStart)="onDrag($event)" [tests]="unscheduledTests" (menuToggle)="toggleMenu($event)"></app-unassigned-tests>
+    <app-unassigned-tests [@openClose]="menuState" class="col-3 h-100 p-0" [class.all-assigned]="" (testDropped)="dragEnd($event)" (testDragStart)="onDrag($event)" [tests]="unscheduledTests" (menuToggle)="toggleMenu($event)"></app-unassigned-tests>
     <ejs-schedule *ngIf="currentCompetition" #scheduleObj class="col h-100" cssClass="schedule-cell-dimension"
     [selectedDate]="currentCompetition.startdate" [eventDragArea]="droppable-area" [timeScale]="timeScale" [eventSettings]="eventSettings" [group]="group"
     (dragStop)="dragEnd($event)" (popupOpen)="onPopupOpen($event)">
