Worked on broken schedule component and optimised test loading

--- a/src/app/schedule-container/schedule-container.component.css
+++ b/src/app/schedule-container/schedule-container.component.css
@@ -39,3 +39,8 @@ app-unassigned-tests {
 .alert-container {
     justify-content: center;
 }
+
+.sidebar {
+    min-width: 400px;
+    max-width: 400px;
+}
