--- a/src/app/schedule-container/schedule-container.component.html
+++ b/src/app/schedule-container/schedule-container.component.html
@@ -5,11 +5,11 @@
   <div *ngIf="currentCompetition" class="row h-100">
     <app-unassigned-tests [@openClose]="menuState" class="col-3 h-100 p-0 sidebar" (testDropped)="dragEnd($event)" (testDragStart)="onDrag($event)" (menuToggle)="toggleMenu($event)"></app-unassigned-tests>
     <ejs-schedule #scheduleObj class="col h-100" cssClass="schedule-cell-dimension"
-      [selectedDate]="currentCompetition.startdate" [eventSettings]="eventSettings" [timeScale]="timeScale" [allowDragAndDrop]="true"
+      [selectedDate]="currentCompetition.startdate" [eventSettings]="eventSettings" [timeScale]="timeScale" [allowDragAndDrop]="true" [group]="group"
       (dragStop)="dragEnd($event)" (popupOpen)="onPopupOpen($event)" (created)="onCreate()">
       <e-views>
-        <e-view displayName="Competition" option="Day" [interval]="currentCompetition.getDays()" startHour="07:00" endHour="23:00" [group]="group"></e-view>
-        <e-view option="Week" startHour="07:00" endHour="23:00" [group]="group" firstDayOfWeek="1"></e-view>
+        <e-view displayName="Competition" option="Day" [interval]="currentCompetition.getDays()" startHour="07:00" endHour="23:00"></e-view>
+        <e-view option="Week" startHour="07:00" endHour="23:00"></e-view>
       </e-views>
       <ng-template #eventSettingsTemplate let-data>
           <div class='template-wrap' [style.background]="data.SecondaryColor">
