--- a/src/app/schedule-container/schedule-container.component.html
+++ b/src/app/schedule-container/schedule-container.component.html
@@ -1,132 +1,9 @@
-<div class="container-fluid">
-  <div *ngIf="!currentCompetition && !loading" class="row alert-container py-4">
-    <ngb-alert [dismissible]="false" type="danger">Please select a competition before proceeding.</ngb-alert>
-  </div>
-  <div *ngIf="currentCompetition" class="row h-100">
-    <app-unassigned-tests [@openClose]="menuState" class="col-3 h-100 p-0 sidebar" (testDropped)="dragEnd($event)" (testDragStart)="onDrag($event)" (menuToggle)="toggleMenu($event)"></app-unassigned-tests>
-    <ejs-schedule #scheduleObj class="col h-100" cssClass="schedule-cell-dimension"
-      [selectedDate]="currentCompetition.startdate" [eventSettings]="eventSettings" [timeScale]="timeScale" [allowDragAndDrop]="true" [group]="group"
-      (dragStop)="dragEnd($event)" (popupOpen)="onPopupOpen($event)" (created)="onCreate()">
-      <e-views>
-        <e-view displayName="Competition" option="Day" [interval]="currentCompetition.getDays()" startHour="07:00" endHour="23:00"></e-view>
-        <e-view option="Week" startHour="07:00" endHour="23:00"></e-view>
-      </e-views>
-      <ng-template #eventSettingsTemplate let-data>
-          <div class='template-wrap' [style.background]="data.SecondaryColor">
-              <div class="subject">{{data.testcode}} {{ data.phase }} <span *ngIf="data.phase == 'prel'">({{ data.getLeftReinHeats() + data.getRightReinHeats() }})</span>
-                <i *ngIf="data.getDuration() > 125 && data.getDuration() < 150" class="fa fa-warning warning noclick" ngbTooltip="This test is longer than 2 hours. Consider splitting it up to give the judges a break."
-                  container="body" placement="bottom"></i>
-                <i *ngIf="data.getDuration() >= 150" class="fa fa-exclamation-circle critical noclick" ngbTooltip="This test is longer than 2,5 hours. You should split it up to give the judges a break."
-                  container="body" placement="bottom"></i>
-              </div>
-              <div *ngIf="data.phase == 'prel'" class="section">
-                  Section {{ data.section + 1 }}
-              </div>
-              <div class="time">{{ data.starttime | date:"HH:mm" }} - {{ data.endtime | date:"HH:mm"}}</div>
-              <div *ngIf="data.phase == 'prel' && data.section == 0 && !data.origcode.includes('P')" class="btn-group btn-group-sm">
-                <button class="btn" id="#{{data.testcode}}" [class.btn-danger]="!data.afin" [class.btn-success]="data.afin" type="button" (click)="toggleFinal(data, 'AFIN')">AFIN</button>
-                <button class="btn" [class.btn-danger]="!data.bfin" [class.btn-success]="data.bfin" type="button" (click)="toggleFinal(data, 'BFIN')">BFIN</button>
-              </div>
-
-              <!-- <div class="btn-group btn-group-sm" *ngIf="data.phase !== 'custom'">
-                  <button class="btn btn-sm btn-dark" [ngbPopover]="judges" container="body" popoverTitle="Judges for {{ test.testcode }} {{ test.phase}}" placement="bottom">
-                    <span class="col">Judges ({{ judgeList.length }})
-                      <i *ngIf="judgeList.length < test.expected_judges" class="fa fa-exclamation-triangle warning" ngbTooltip="There should be 5 judges in this test"
-                        container="body"></i>
-                      <i *ngIf="judgeList.length === test.expected_judges" class="fa fa-check check" ngbTooltip="Good job! Nothing to worry about here."
-                        container="body"></i>
-                    </span>
-                  </button>
-                  <button class="btn btn-sm btn-dark" [ngbPopover]="split" container="body" placement="bottom" popoverTitle="Split test after x riders">
-                    <i class="fa fa-clone check" ngbTooltip="Split test" container="body" placement="bottom"></i>
-                  </button>
-                  <button *ngIf="data.section > 0" class="btn btn-sm btn-dark" [ngbPopover]="join" container="body" popoverTitle="Merge with section x">
-                    <i class="fa fa-link check" ngbTooltip="Merge test sections" container="body"></i>
-                  </button>
-                </div>
-                <div class="btn-group" *ngIf="data.phase === 'Preliminary' && data.section == 0">
-                  <button class="btn btn-sm" [class.btn-danger]="!data.hasAfinal" [class.btn-success]="data.hasAfinal" type="button" (click)="toggleFinal('a')">AFIN</button>
-                  <button class="btn btn-sm" [class.btn-danger]="!data.hasBfinal" [class.btn-success]="data.hasBfinal" type="button" (click)="toggleFinal('b')">BFIN</button>
-                </div> -->
-          </div>
-      </ng-template>
-      <e-resources>
-        <e-resource field="venue_id" title="Venue" name="Venues" [allowMultiple]="false" [dataSource]="currentCompetition.venues" idField="id" textField="name"></e-resource>
-      </e-resources>
-      <ng-template #editorTemplate let-data>
-          <div class="container">
-            <div class="row">
-              <div class="col pr-1">
-                <div class="e-textlabel">Testcode</div>
-                <input id="Subject" class="e-field e-input" type="text" value="" name="testcode" style="width: 100%" />
-              </div>
-              <div class="col pl-1">
-                <div class="e-textlabel">Origcode</div>
-                <input id="origcode" class="e-field e-input" type="text" value="" name="origcode" style="width: 100%" readonly />
-              </div>
-            </div>
-            <div class="row">
-              <div class="col pr-1">
-                <div class="e-textlabel">From</div>
-                <input id="StartTime" class="e-field e-input" type="text" name="starttime" />
-              </div>
-              <div class="col pl-1">
-                <div class="e-textlabel">To</div>
-                <input id="EndTime" class="e-field e-input" type="text" name="endtime" />
-              </div>
-            </div>
-            <!-- <div class="row">
-              <div class="col">
-                <div class="e-textlabel">Origcode</div>
-                <input id="Subject" class="e-field e-input" type="text" value="" name="testcode" style="width: 100%" />
-              </div>
-            </div> -->
-          </div>
-      </ng-template>
-      <!-- <ng-template #quickinfoTemplate let-data>
-
-      </ng-template> -->
-    </ejs-schedule>
-  </div>
-</div>
-
-<ng-template #split>
-    <div class="input-group input-group-sm mb-3">
-      <div class="input-group-prepend">
-        <span class="input-group-text">LR</span>
-      </div>
-      <input class="form-control" type="number" name="lr" [(ngModel)]="split_lr" placeholder="Left Rein">
-      <div class="input-group-prepend" *ngIf="test.right_heats > 0">
-        <span class="input-group-text">RR</span>
-      </div>
-      <input *ngIf="test.right_heats > 0" class="form-control" type="number" name="rr" [(ngModel)]="split_rr" placeholder="Right Rein">
-      <div class="input-group-append">
-        <button type="button" class="btn btn-outline-primary" (click)="splitTest()">Split</button>
-      </div>
+<app-page-container title="Schedule" [cssClass]="'h-100'">
+    <div *ngIf="!currentCompetition && !loading" class="row alert-container py-4">
+      <ngb-alert [dismissible]="false" type="danger">Please select a competition before proceeding.</ngb-alert>
     </div>
-  </ng-template>
-  
-  <ng-template #join>
-    <div class="input-group input-group-sm mb-3">
-      <input class="form-control" type="number" name="join" [(ngModel)]="join_section" placeholder="Join">
-      <div class="input-group-append">
-        <button type="button" class="btn btn-outline-primary" (click)="joinTest()">Merge</button>
-      </div>
+    <div *ngIf="currentCompetition" class="row page-content">
+      <app-unassigned-tests [@openClose]="menuState" class="col-3 h-100 p-0 sidebar" (menuToggle)="toggleMenu($event)"></app-unassigned-tests>
+      <app-schedule class="col h-100" [competition]="currentCompetition"></app-schedule>
     </div>
-  </ng-template>
-  
-  <ng-template #judges>
-    <div *ngFor="let judge of judgeList" class="alert alert-primary">
-      {{ judge.fname }} {{ judge.lname }} ({{judge.status}})
-      <i *ngIf="judge.times[0].time > 480" ngbTooltip="This judge has more than 8 hours of judging today..." class="fa fa-exclamation-triangle warning noclick" container="body"></i>
-      <i *ngIf="judge.times[0].end.getTime() - judge.times[0].start.getTime() > 600 * 60000" ngbTooltip="This judge has a longer day than 10 hours today..."
-        class="fa fa-exclamation-triangle warning noclick" container="body"></i>
-      <i class="fa fa-times remove" (click)="removeJudge(judge.fname, judge.lname)"></i>
-    </div>
-    <div class="input-group input-group-sm mb-3" *ngIf="judgeList.length < test.expected_judges">
-      <select class="form-control form-control-sm" name="new-judge" #newjudge (change)="addJudge(judgesNotInTest[newjudge.value].fname, judgesNotInTest[newjudge.value].lname); newjudge.value = -1;">
-        <option [value]="-1" disabled selected>Select judge</option>
-        <option *ngFor="let j of judgesNotInTest; index as i" [value]="i">{{j.fname}} {{j.lname}} ({{j.status}})</option>
-      </select>
-    </div>
-  </ng-template>
+</app-page-container>
