--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="app-container h-100">
+    <app-menubar></app-menubar>
+    <router-outlet></router-outlet>
+</div>
