--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -1,12 +1,3 @@
-h1 {
-    text-align: center;
-    margin-top: 10px;
-}
-
-.list-group-item {
-    display: flex;
-}
-
 td {
     vertical-align: middle;
 }
@@ -22,4 +13,12 @@ th {
 
 .venue {
     font-size: 1rem;
+}
+
+.page-section:not(:first-child) {
+    border-top: 1px solid #dee2e6!important;
+}
+
+.page-section {
+    padding: 1rem 0;
 }
