--- a/src/app/test-card/test-card.component.html
+++ b/src/app/test-card/test-card.component.html
@@ -1,25 +1,15 @@
-<!-- <div class="test-card alert alert-dark row" #test [dragData]="test" (onDragEnd)="testGrabbed($event)"> -->
-<div class="test-card alert alert-dark row" #testElt>
-  <div class="test-content col">
-    <h5 [class.capitalize]="test.phase !== 'custom'">{{ test.testcode }}<span *ngIf="test.phase !== 'custom'"> {{ test.phase }}</span></h5>
-    <div *ngIf="test.phase === 'prel'">
-      <div *ngIf="test.groupsize === 1; else heats" class="groupsize-1 heats">Number of riders: {{ test.getLeftReinHeats() }} </div>
-      <ng-template #heats>
-        <span class="heats lr">Left Rein: {{ test.getLeftReinHeats() }} ({{ test.left_rein_participants }})
-          <span class="bagde" [class.badge-danger]="test.getFreePlacesLeft() === 0" [class.badge-success]="test.getFreePlacesLeft() > 0">+{{ test.getFreePlacesLeft() }}</span>
-        </span>
-        <span class="heats rr">Right Rein: {{ test.getRightReinHeats() }} ({{ test.right_rein_participants }})
-          <span class="bagde" [class.badge-danger]="test.getFreePlacesRight() === 0" [class.badge-success]="test.getFreePlacesRight() > 0">+{{ test.getFreePlacesRight() }}</span>
-        </span>
-      </ng-template>
-    </div>
+<div class='template-wrap'>
+  <div class="subject d-flex justify-content-between">
+    <span>{{ test.label }} <span id="groupsFor-{{test.block_id}}" *ngIf="test.phase == 'PREL'">({{ test.groups }})</span></span>
+    <span class="warning-container">
+      <i *ngIf="test.getDuration() > 125 && test.getDuration() < 150" class="fa fa-warning text-warning" ngbTooltip="This test is longer than 2 hours. Consider splitting it up to give the judges a break."
+        container="body" placement="bottom"></i>
+      <i *ngIf="test.getDuration() >= 150" class="fa fa-exclamation-circle text-danger" ngbTooltip="This test is longer than 2,5 hours. You should split it up to give the judges a break."
+        container="body" placement="bottom"></i>
+    </span>
   </div>
-  <div class="time col-4">
-    <span class="hours" *ngIf="test.getHours() > 0">{{ test.getHours() }}h</span>
-    <span class="minutes" *ngIf="test.getMinutes() > 0">{{ test.getMinutes() }}m</span>
-    <div class="btn-group" *ngIf="test.phase === 'prel' && test.section == 0 && !test.origcode.includes('P')">
-      <button class="btn btn-sm" [class.btn-danger]="!test.hasAfinal" [class.btn-success]="test.hasAfinal" type="button" (click)="toggleFinal('a')">AFIN</button>
-      <button class="btn btn-sm" [class.btn-danger]="!test.hasBfinal" [class.btn-success]="test.hasBfinal" type="button" (click)="toggleFinal('b')">BFIN</button>
-    </div>
+  <div *ngIf="test.phase === 'PREL'" class="section">
+      Block {{ test.block_number }}
   </div>
+  <div class="time">{{ test.getStartTime() | date:"HH:mm" }} - {{ test.getEndTime() | date:"HH:mm"}}</div>
 </div>
