--- a/src/app/unassigned-tests/unassigned-tests.component.css
+++ b/src/app/unassigned-tests/unassigned-tests.component.css
@@ -1,57 +1,45 @@
 .unassigned-container {
-    border-right: #312783 medium solid;
-    box-shadow: 5px 0px 10px -5px black;
-    padding: 10px 25px;
+    border-right: #292930 medium solid;
     overflow-y: scroll;
-    min-width: 400px;
+    overflow-x: hidden;
+}
+
+app-testlist {
+    min-width: 300px;
 }
 
 button {
     width: 100%;
 }
 
-#refresh {
+.title-container {
+    height: 4rem;
+    display: flex;
+    align-items: center;
+}
+
+.title {
+    padding: 0 1.25rem;
+}
+
+.list-group-item {
+    cursor: default;
+}
+
+.list-group-item-action {
     cursor: pointer;
-}
-
-.loading {
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-.btn-container {
-    width: calc(100% - 50px);
-    position: absolute;
-    bottom: 10px;
-    left: 25px;
-}
-
-.droppable-area {
-    min-height: 80vh;
-}
-
-.drag-over-border {
-    border: green thick solid;
-}
-
-.tests {
-    height: 100%;
 }
 
 .menutoggle {
     position: absolute;
-    top: 50%;
+    top: 0;
     right: -35px;
     z-index: 99;
-    box-shadow: black 0 0 10px;
-    background-color: #312783;
-    border-color: #312783;
+    background-color: #292930;
+    border-color: #292930;
     width: 35px;
-    height: 50px;
-    border-radius: 0 100px 100px 0;
+    height: 3rem;
+    border-radius: 0 10px 10px 0;
     font-size: 25px;
     display: flex;
     justify-content: center;
