Fixed build errors

--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,4 +1,4 @@
-<h2>{{ date | date:'EEEE MMM d'}}</h2>
+<!-- <h2>{{ date | date:'EEEE MMM d'}}</h2>
 <div class="h-100">
   <div class="h-100">
     <table class="grid">
@@ -22,4 +22,4 @@
       </tr>
     </table>
   </div>
-</div>
+</div> -->
