--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -2,6 +2,8 @@
   cssClass="schedule-cell-dimension"
   width="100%"
   height="100%"
+
+  [timezone]="UTC"
   
   [selectedDate]="competition.startdate"
   [eventSettings]="eventSettings"
